<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="15dp"
        android:paddingRight="15dp"
        android:paddingBottom="5dp"
        android:text="@string/about_us"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="21sp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:text="@string/about_desc"
        android:textColor="@color/colorPrimary"
        android:textSize="17sp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autoLink="email"
        android:padding="10dp"
        android:text="@string/contact_us_email"
        android:textColor="@color/colorPrimaryDark"
        android:textDirection="rtl"
        android:textSize="15sp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autoLink="web"
        android:padding="10dp"
        android:text="@string/web_roela_ir"
        android:textColor="@color/colorPrimaryDark"
        android:textDirection="rtl"
        android:textSize="15sp" />

    <TextView
        android:id="@+id/txtVersion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:textColor="@color/colorPrimaryDark"
        android:textDirection="rtl"
        android:textSize="15sp"
        android:gravity="center"/>

</LinearLayout>