<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layoutDirection="rtl"
    android:orientation="vertical"
    android:padding="8dp">

    <TextView
        android:id="@+id/txtCounterToSave"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textColor="@color/colorPrimary"
        android:textSize="28sp"
        android:textStyle="bold" />


    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/edtCountName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:focusableInTouchMode="true"
            android:fontFamily="sans-serif"
            android:hint="@string/count_name"
            android:inputType="text"
            android:layoutDirection="rtl"
            android:padding="10dp"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="18sp" />
    </com.google.android.material.textfield.TextInputLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:gravity="center"
        android:layoutDirection="ltr"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/txtSelectedDate"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_weight="1"
            android:gravity="center"
            android:textColor="@color/colorPrimary"
            android:textSize="18sp" />

        <ImageButton
            android:id="@+id/btnSelectDate"
            android:layout_width="36dp"
            android:layout_height="36dp"
            android:background="?selectableItemBackgroundBorderless"
            android:contentDescription="date"
            android:src="@drawable/ic_date_24" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layoutDirection="rtl"
        android:orientation="horizontal">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnDlgSaveCount"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="60"
            android:drawableEnd="@drawable/ic_save_24"
            android:shadowColor="@color/colorPrimaryDark"
            android:text="@string/save_counter"
            android:textAllCaps="false"
            android:textColor="@android:color/white"
            android:textSize="18sp"
            android:textStyle="bold"
            app:backgroundTint="@color/colorPrimary" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnCancelDlg"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dp"
            android:layout_weight="40"
            android:text="@string/close"
            android:textAllCaps="false"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="16sp"
            android:textStyle="bold"
            app:backgroundTint="@android:color/darker_gray" />


    </LinearLayout>


</LinearLayout>